# template-ai-service-python-ddd-uv

./: .env.example  .gitignore  .gitignore copy  .pre-commit-config.yaml  README.md  claude.md  debug.py  main.py  pyproject.toml  run.sh  setup-to-do.md
.claude/skills/python-dto-flat/: SKILL.md
.claude/skills/python-exceptions/: SKILL.md
.claude/skills/python-fastapi/: SKILL.md
.claude/skills/python-logger/: SKILL.md
.claude/skills/python-mappers/: SKILL.md
.claude/skills/skill-creator/eval-viewer/: generate_review.py
.cursor/: settings.json
.cursor/skills/python-logger/: SKILL.md
_docs/: README.md
_docs/journal/: decisions.md
_docs/readme/: readme-env-keys-n-vars.md  readme-mypy-ruff.config.md  readme-precommit.md
_docs/setup/: uv-env-setup.md  uv-python-version-management.md
docker/: Dockerfile  README.md  docker-compose-with-psql.yaml  docker-compose.yaml
service/: __init__.py  registry.py  settings.py
service/application/: dtos.py  mappers.py
service/interface/api/: __init__.py  api_v1_health_check.py
service/shared/: __init__.py  ai_models.py  exceptions.py  logger.py  registry.py  stack_trace.py  terminal.py
